added sign in page along with some gray boxes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 			<div class="col-md-7 col-md-offset-1"><img src="http://i.imgur.com/AbLuB5l.jpg" alt="" class="img-responsive"></div>
 			<div class="col-md-3">
-				<img src="img/chris.jpg" alt="" class="chris">
+				<img src="img/chris.jpg" alt="" class="avatar">
 				<h3>Geeky Gadgets</h3>
 				<h4>by Chris Pirillo</h4>
 				<button type="button" class="btn btn-info">order now</button>
