--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<h1 class="logo">boxesby</h1>
 			</div>	
 			<div class="col-md-1"><a href="makeabox.html" class="headerlinks"><h3>make a box</h3></a></div>
-			<div class="col-md-1"><a href="login.html" class="headerlinks"><h3>login</h3></a></div>
+			<div class="col-md-1"><a href="signin.html" class="headerlinks"><h3>login</h3></a></div>
 			<div class="col-md-1"><a href="join.html" class="join headerlinks"><h3>join</h3></a></div>
 		
 		</div>
