circular images, improvements to the home page.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<div class="container">
 			
 				<div class="btn-group">
-					<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+					<button type="button" class="btn btn-default dropdown-toggle categories" data-toggle="dropdown">
 						<span class="caret"></span> categories 
 					</button>
 					<ul class="dropdown-menu" role="menu">
@@ -72,7 +72,7 @@
 				</div>
 
 				<div class="table-responsive">
-					<table class="table">
+					<table class="table table-unstyled">
 						<tr>
 							<td>
 								<img src="img/chris.jpg" alt="" class="avatar">
