fixed bottom border

--- a/personsbox.html
+++ b/personsbox.html
@@ -113,7 +113,7 @@
 			</div>
 		</footer>
 		<div class="row">
-			<div class="col-md-8 col-md-offset-2 redline"></div>
+			<div class="col-md-12 redline"></div>
 		</div>
 	</div>
 	
