--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
 					</li>
 				</ul>
 			</div>
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 redline"></div>
-			</div>
 		</footer>
+		<div class="row">
+			<div class="col-md-12 redline"></div>
+		</div>
 	</div>
 
 <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>	
