--- a/personsbox.html
+++ b/personsbox.html
@@ -12,7 +12,7 @@
 		<div class="row title">
 
 			<div class="col-md-9">
-				<h1 class="logo">boxesby</h1>
+				<img src="img/logo.png" alt="BoxesBy" class="logo">
 			</div>	
 			<div class="col-md-1"><a href="makeabox.html" class="headerlinks"><h3>make a box</h3></a></div>
 			<div class="col-md-1"><a href="signin.html" class="headerlinks"><h3>login</h3></a></div>
