--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				
 				<div class="col-md-9">
-					<h1 class="logo">boxesby</h1>
+					<img src="img/logo.png" alt="BoxesBy" class="logo">
 				</div>	
 
 				<div class="col-md-1"><a href="makeabox.html" class="headerlinks"><h3>make a box</h3></a></div>
