--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 	
 		<div class="row title">
 
-			<div class="row">
+			<div class="row nav">
 				
-				<div class="col-md-9">
+				<div class="col-md-7">
 					<img src="img/logo.png" alt="BoxesBy" class="logo">
 				</div>	
 
-				<div class="col-md-1"><a href="makeabox.html" class="headerlinks"><h3>make a box</h3></a></div>
-				<div class="col-md-1"><a href="signin.html" class="headerlinks"><h3>login</h3></a></div>
-				<div class="col-md-1"><a href="join.html" class="join headerlinks"><h3>join</h3></a></div>
+				<div class="col-md-3"><a href="makeabox.html" class="headerlinks">make a box</a></div>
+				<div class="col-md-1"><a href="signin.html" class="headerlinks">login</a></div>
+				<div class="col-md-1"><a href="join.html" class="join headerlinks">join</a></div>
 
 			</div>
 			
