--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
 			<div class="row nav">
 				
-				<div class="col-md-7">
+				<div class="col-md-4 col-md-offset-2">
 					<img src="img/logo.png" alt="BoxesBy" class="logo">
 				</div>	
 
-				<div class="col-md-3"><a href="makeabox.html" class="headerlinks">make a box</a></div>
+				<div class="col-md-1 col-md-offset-1"><a href="makeabox.html" class="headerlinks">make a box</a></div>
 				<div class="col-md-1"><a href="signin.html" class="headerlinks">login</a></div>
 				<div class="col-md-1"><a href="join.html" class="join headerlinks">join</a></div>
 
@@ -75,7 +75,7 @@
 			</div>
 			<div class="row">
 				<div class="table-responsive">
-					<table class="table table-unstyled">
+					<table class="table">
 						<tr>
 							<td>
 								<img src="img/chris.jpg" alt="" class="avatar">
