--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-	
 		<div class="row title">
 
 			<div class="row nav">
 				
-				<div class="col-md-4 col-md-offset-2">
+				<div class="col-md-3 col-md-offset-1">
 					<img src="img/logo.png" alt="BoxesBy" class="logo">
 				</div>	
 
-				<div class="col-md-1 col-md-offset-1"><a href="makeabox.html" class="headerlinks">make a box</a></div>
-				<div class="col-md-1"><a href="signin.html" class="headerlinks">login</a></div>
-				<div class="col-md-1"><a href="join.html" class="join headerlinks">join</a></div>
+				<div class="col-md-2 col-md-offset-2 navlinks"><a href="makeabox.html" class="headerlinks">make a box</a></div>
+				<div class="col-md-1 navlinks"><a href="signin.html" class="headerlinks">login</a></div>
+				<div class="col-md-1 navlinks"><a href="join.html" class="join headerlinks">join</a></div>
 
 			</div>
 			
 			<div class="row">
-				<h1 class="tagline">Get awesome stuff monthly from people you follow</h1>
+				<div class="col-md-12">
+					<h1 class="tagline">Get awesome stuff monthly from people you follow</h1>	
+				</div>
 			</div>	
 
 			<div class="row featuredboxes">
