--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 					<img src="img/logo.png" alt="BoxesBy" class="logo">
 				</div>	
 
-				<div class="col-md-2 col-md-offset-2 navlinks"><a href="makeabox.html" class="headerlinks">make a box</a></div>
+				<div class="col-md-2 col-md-offset-2 navlinks">
+					<a href="mailto:box@boxesby.com?subject=Curate a Box&body=Kindly include twitter handle here. #please" class="headerlinks">make a box</a>
+				</div>
 				<div class="col-md-1 navlinks"><a href="signin.html" class="headerlinks">login</a></div>
-				<div class="col-md-1 navlinks"><a href="join.html" class="join headerlinks">join</a></div>
+				<div class="col-md-1 navlinks"><a href="signup.html" class="join headerlinks">join</a></div>
 
 			</div>
 			
