tried fixing nav

--- a/personsbox.html
+++ b/personsbox.html
@@ -11,12 +11,17 @@
 	
 		<div class="row title">
 			<div class="row nav">
-				<div class="col-md-7">
+				
+				<div class="col-md-3 col-md-offset-1">
 					<img src="img/logo.png" alt="BoxesBy" class="logo">
 				</div>	
-					<div class="col-md-3"><a href="makeabox.html" class="headerlinks">make a box</a></div>
-					<div class="col-md-1"><a href="signin.html" class="headerlinks">login</a></div>
-					<div class="col-md-1"><a href="join.html" class="join headerlinks">join</a></div>
+
+				<div class="col-md-2 col-md-offset-2 navlinks">
+					<a href="mailto:box@boxesby.com?subject=Curate a Box&body=Kindly include twitter handle here. #please" class="headerlinks">make a box</a>
+				</div>
+				<div class="col-md-1 navlinks"><a href="signin.html" class="headerlinks">login</a></div>
+				<div class="col-md-1 navlinks"><a href="signup.html" class="join headerlinks">join</a></div>
+
 			</div>
 		</div>
 		<div class="container">
@@ -31,11 +36,14 @@
 		
 		<div class="row selectedperson">
 
-			<div class="col-md-7 col-md-offset-1"><img src="http://i.imgur.com/AbLuB5l.jpg" alt="" class="img-responsive"></div>
+			<div class="col-md-7 col-md-offset-1">
+				<img src="http://i.imgur.com/AbLuB5l.jpg" alt="" class="img-responsive">
+			</div>
 			<div class="col-md-3">
 				<img src="img/chris.jpg" alt="" class="avatar">
 				<h3>Geeky Gadgets</h3>
 				<h4>by Chris Pirillo</h4>
+				<h4 class="price">$19/m</h4>
 				<button type="button" class="btn btn-info">order now</button>
 			</div>
 
