--- a/index.html
+++ b/index.html
@@ -10,19 +10,27 @@
 <body>
 		<div class="row title">
 
-			<div class="row nav">
+	
 				
-				<div class="col-md-3 col-md-offset-1">
-					<img src="img/logo.png" alt="BoxesBy" class="logo">
-				</div>	
-
+				<!-- 
 				<div class="col-md-2 col-md-offset-2 navlinks">
-					<a href="mailto:box@boxesby.com?subject=Curate a Box&body=Kindly include twitter handle here. #please" class="headerlinks">make a box</a>
+					<a href="mailto:box@boxesby.com?subject=Curate a Box&body=Kindly include twitter handle here. #please" class="makeabox headerlinks">make a box</a>
 				</div>
-				<div class="col-md-1 navlinks"><a href="signin.html" class="headerlinks">login</a></div>
+				<div class="col-md-1 navlinks"><a href="signin.html" class="login headerlinks">login</a></div>
 				<div class="col-md-1 navlinks"><a href="signup.html" class="join headerlinks">join</a></div>
+				
+ -->
+			<div class="col-md-8 centernav">
+				<img src="img/logo.png" alt="BoxesBy" class="logo">
+				<ul class="nav nav-pills">
+				<li class="active"><a href="#">Home</a></li>
+				<li><a href="#">make a box</a></li>
+				<li><a href="#">login</a></li>
+				<li><a href="#">signup</a></li>
 
+				</ul>			
 			</div>
+	
 			
 			<div class="row">
 				<div class="col-md-12">
@@ -35,22 +43,26 @@
 				<div class="col-md-2 col-md-offset-2">
 					<img src="img/chris.jpg" alt="" class="avatar">
 					<h3>Geeky Gadgets</h3>
-					<h4>by Chris Pirillo</h4>
+					<h4 class="namesubtag">by Chris Pirillo</h4>
+					<p class="homeprice">$19/m</p>
 				</div>
 				<div class="col-md-2">
 					<img src="img/chris.jpg" alt="" class="avatar">
 					<h3>Geeky Gadgets</h3>
-					<h4>by Chris Pirillo</h4>
+					<h4 class="namesubtag">by Chris Pirillo</h4>
+					<p class="homeprice">$19/m</p>
 				</div>
 				<div class="col-md-2">
 					<img src="img/chris.jpg" alt="" class="avatar">
 					<h3>Geeky Gadgets</h3>
-					<h4>by Chris Pirillo</h4>
+					<h4 class="namesubtag">by Chris Pirillo</h4>
+					<p class="homeprice">$19/m</p>
 				</div>
 				<div class="col-md-2">
 					<img src="img/chris.jpg" alt="" class="avatar">
 					<h3>Geeky Gadgets</h3>
-					<h4>by Chris Pirillo</h4>
+					<h4 class="namesubtag">by Chris Pirillo</h4>
+					<p class="homeprice">$19/m</p>
 				</div>
 
 			</div>
