--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
 				<div class="col-md-1 navlinks"><a href="signin.html" class="login headerlinks">login</a></div>
 				<div class="col-md-1 navlinks"><a href="signup.html" class="join headerlinks">join</a></div>
 				
- -->
-			<div class="col-md-8 centernav">
-				<img src="img/logo.png" alt="BoxesBy" class="logo">
-				<ul class="nav nav-pills">
-				<li class="active"><a href="#">Home</a></li>
-				<li><a href="#">make a box</a></li>
-				<li><a href="#">login</a></li>
-				<li><a href="#">signup</a></li>
+ -->		<div class="row">
+				<div class="centernav">
+					<img src="img/logo.png" alt="BoxesBy" class="logo">
+					<ul class="nav nav-pills">
+					<li class="active"><a href="#">Home</a></li>
+					<li><a href="#">make a box</a></li>
+					<li><a href="#">login</a></li>
+					<li><a href="#">signup</a></li>
 
-				</ul>			
+					</ul>			
+				</div>
 			</div>
 	
 			
