--- a/index.html
+++ b/index.html
@@ -9,25 +9,16 @@
 </head>
 <body>
 		<div class="row title">
-
-	
-				
-				<!-- 
-				<div class="col-md-2 col-md-offset-2 navlinks">
-					<a href="mailto:box@boxesby.com?subject=Curate a Box&body=Kindly include twitter handle here. #please" class="makeabox headerlinks">make a box</a>
-				</div>
-				<div class="col-md-1 navlinks"><a href="signin.html" class="login headerlinks">login</a></div>
-				<div class="col-md-1 navlinks"><a href="signup.html" class="join headerlinks">join</a></div>
-				
- -->		<div class="row">
+			<div class="row">
 				<div class="centernav">
-					<img src="img/logo.png" alt="BoxesBy" class="logo">
+					<a href="index.html">
+						<img src="img/logo.png" alt="BoxesBy" class="logo">
+					</a>
 					<ul class="nav nav-pills">
-					<li class="active"><a href="#">Home</a></li>
-					<li><a href="#">make a box</a></li>
-					<li><a href="#">login</a></li>
-					<li><a href="#">signup</a></li>
-
+						<li class="active"><a href="#">Home</a></li>
+						<li><a href="mailto:box@boxesby.com?subject=Request to Curate a Box&body=#please include your twitter handle">make a box</a></li>
+						<li><a href="signin.html">login</a></li>
+						<li><a href="signup.html">sign up</a></li>
 					</ul>			
 				</div>
 			</div>
@@ -70,7 +61,9 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					<button type="button" class="btn btn-info viewmore">view more</button>
+					<a href="personsbox.html">
+						<button type="button" class="btn btn-info viewmore">view more</button>
+					</a>
 				</div>
 			</div>
 		</div>
