--- a/personsbox.html
+++ b/personsbox.html
@@ -10,18 +10,18 @@
 
 	
 		<div class="row title">
-			<div class="row nav">
-				
-				<div class="col-md-3 col-md-offset-1">
-					<img src="img/logo.png" alt="BoxesBy" class="logo">
-				</div>	
-
-				<div class="col-md-2 col-md-offset-2 navlinks">
-					<a href="mailto:box@boxesby.com?subject=Curate a Box&body=Kindly include twitter handle here. #please" class="headerlinks">make a box</a>
+			<div class="row">
+				<div class="centernav">
+					<a href="index.html">
+						<img src="img/logo.png" alt="BoxesBy" class="logo">
+					</a>
+					<ul class="nav nav-pills">
+						<li class="active"><a href="#">Home</a></li>
+						<li><a href="mailto:box@boxesby.com?subject=Request to Curate a Box&body=#please include your twitter handle">make a box</a></li>
+						<li><a href="signin.html">login</a></li>
+						<li><a href="signup.html">sign up</a></li>
+					</ul>			
 				</div>
-				<div class="col-md-1 navlinks"><a href="signin.html" class="headerlinks">login</a></div>
-				<div class="col-md-1 navlinks"><a href="signup.html" class="join headerlinks">join</a></div>
-
 			</div>
 		</div>
 		<div class="container">
