--- a/index.html
+++ b/index.html
@@ -33,27 +33,27 @@
 			<div class="row featuredboxes">
 				
 				<div class="col-md-2 col-md-offset-2">
-					<img src="img/chris.jpg" alt="" class="avatar">
+					<img src="img/dave.png" alt="" class="avatar">
 					<h3>Geeky Gadgets</h3>
-					<h4 class="namesubtag">by Chris Pirillo</h4>
+					<h4 class="namesubtag">by Dave Fontenot</h4>
 					<p class="homeprice">$19/m</p>
 				</div>
 				<div class="col-md-2">
-					<img src="img/chris.jpg" alt="" class="avatar">
+					<img src="img/dave.png" alt="" class="avatar">
 					<h3>Geeky Gadgets</h3>
-					<h4 class="namesubtag">by Chris Pirillo</h4>
+					<h4 class="namesubtag">by Dave Fontenot</h4>
 					<p class="homeprice">$19/m</p>
 				</div>
 				<div class="col-md-2">
-					<img src="img/chris.jpg" alt="" class="avatar">
+					<img src="img/dave.png" alt="" class="avatar">
 					<h3>Geeky Gadgets</h3>
-					<h4 class="namesubtag">by Chris Pirillo</h4>
+					<h4 class="namesubtag">by Dave Fontenot</h4>
 					<p class="homeprice">$19/m</p>
 				</div>
 				<div class="col-md-2">
-					<img src="img/chris.jpg" alt="" class="avatar">
+					<img src="img/dave.png" alt="" class="avatar">
 					<h3>Geeky Gadgets</h3>
-					<h4 class="namesubtag">by Chris Pirillo</h4>
+					<h4 class="namesubtag">by Dave Fontenot</h4>
 					<p class="homeprice">$19/m</p>
 				</div>
 
@@ -85,53 +85,53 @@
 					<table class="table">
 						<tr>
 							<td>
-								<img src="img/chris.jpg" alt="" class="avatar">
+								<img src="img/dave.png" alt="" class="avatar">
 								<h3>Geeky Gadgets</h3>
-								<h4>by Chris Pirillo</h4>
+								<h4>by Dave Fontenot</h4>
 							</td>
 							<td>
-								<img src="img/chris.jpg" alt="" class="avatar">
+								<img src="img/dave.png" alt="" class="avatar">
 								<h3>Geeky Gadgets</h3>
-								<h4>by Chris Pirillo</h4>
+								<h4>by Dave Fontenot</h4>
 							</td>
 							<td>
-								<img src="img/chris.jpg" alt="" class="avatar">
+								<img src="img/dave.png" alt="" class="avatar">
 								<h3>Geeky Gadgets</h3>
-								<h4>by Chris Pirillo</h4>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<img src="img/chris.jpg" alt="" class="avatar">
-								<h3>Geeky Gadgets</h3>
-								<h4>by Chris Pirillo</h4>
-							</td>
-							<td>
-								<img src="img/chris.jpg" alt="" class="avatar">
-								<h3>Geeky Gadgets</h3>
-								<h4>by Chris Pirillo</h4>
-							</td>
-							<td>
-								<img src="img/chris.jpg" alt="" class="avatar">
-								<h3>Geeky Gadgets</h3>
-								<h4>by Chris Pirillo</h4>
+								<h4>by Dave Fontenot</h4>
 							</td>
 						</tr>
 						<tr>
 							<td>
-								<img src="img/chris.jpg" alt="" class="avatar">
+								<img src="img/dave.png" alt="" class="avatar">
 								<h3>Geeky Gadgets</h3>
-								<h4>by Chris Pirillo</h4>
+								<h4>by Dave Fontenot</h4>
 							</td>
 							<td>
-								<img src="img/chris.jpg" alt="" class="avatar">
+								<img src="img/dave.png" alt="" class="avatar">
 								<h3>Geeky Gadgets</h3>
-								<h4>by Chris Pirillo</h4>
+								<h4>by Dave Fontenot</h4>
 							</td>
 							<td>
-								<img src="img/chris.jpg" alt="" class="avatar">
+								<img src="img/dave.png" alt="" class="avatar">
 								<h3>Geeky Gadgets</h3>
-								<h4>by Chris Pirillo</h4>
+								<h4>by Dave Fontenot</h4>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="img/dave.png" alt="" class="avatar">
+								<h3>Geeky Gadgets</h3>
+								<h4>by Dave Fontenot</h4>
+							</td>
+							<td>
+								<img src="img/dave.png" alt="" class="avatar">
+								<h3>Geeky Gadgets</h3>
+								<h4>by Dave Fontenot</h4>
+							</td>
+							<td>
+								<img src="img/dave.png" alt="" class="avatar">
+								<h3>Geeky Gadgets</h3>
+								<h4>by Dave Fontenot</h4>
 							</td>
 						</tr>
 					</table>
