centered privacy policy

--- a/personsbox.html
+++ b/personsbox.html
@@ -88,7 +88,7 @@
 					<li><a href="levels.html">Levels</a></li>
 					<li><a href="blog">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
-					<li><a href="privacypolicy.html">Privacy Policy</a></li>
+					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2 ">
@@ -99,7 +99,7 @@
 					<li><a href="levels.html">Levels</a></li>
 					<li><a href="blog">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
-					<li><a href="privacypolicy.html">Privacy Policy</a></li>
+					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2 ">
@@ -110,7 +110,7 @@
 					<li><a href="levels.html">Levels</a></li>
 					<li><a href="blog">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
-					<li><a href="privacypolicy.html">Privacy Policy</a></li>
+					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2 ">
