--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 					<li><a href="wearehiring.html">We Are Hiring</a></li>
 					<li><a href="directory.html">Boxesby Directory</a></li>
 					<li><a href="levels.html">Levels</a></li>
-					<li><a href="blog">The Boxesby Blog</a></li>
+					<li><a href="blog.html">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
 					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
@@ -169,7 +169,7 @@
 					<li><a href="wearehiring.html">We Are Hiring</a></li>
 					<li><a href="directory.html">Boxesby Directory</a></li>
 					<li><a href="levels.html">Levels</a></li>
-					<li><a href="blog">The Boxesby Blog</a></li>
+					<li><a href="blog.html">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
 					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
@@ -180,7 +180,7 @@
 					<li><a href="wearehiring.html">We Are Hiring</a></li>
 					<li><a href="directory.html">Boxesby Directory</a></li>
 					<li><a href="levels.html">Levels</a></li>
-					<li><a href="blog">The Boxesby Blog</a></li>
+					<li><a href="blog.html">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
 					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
