--- a/personsbox.html
+++ b/personsbox.html
@@ -86,7 +86,7 @@
 					<li><a href="wearehiring.html">We Are Hiring</a></li>
 					<li><a href="directory.html">Boxesby Directory</a></li>
 					<li><a href="levels.html">Levels</a></li>
-					<li><a href="blog">The Boxesby Blog</a></li>
+					<li><a href="blog.html">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
 					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
@@ -97,7 +97,7 @@
 					<li><a href="wearehiring.html">We Are Hiring</a></li>
 					<li><a href="directory.html">Boxesby Directory</a></li>
 					<li><a href="levels.html">Levels</a></li>
-					<li><a href="blog">The Boxesby Blog</a></li>
+					<li><a href="blog.html">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
 					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
@@ -108,7 +108,7 @@
 					<li><a href="wearehiring.html">We Are Hiring</a></li><!DOCTYPE html>
 					<li><a href="directory.html">Boxesby Directory</a></li>
 					<li><a href="levels.html">Levels</a></li>
-					<li><a href="blog">The Boxesby Blog</a></li>
+					<li><a href="blog.html">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
 					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
