changed geeky gadgets to hackathon superpowers.

--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
 				
 				<div class="col-md-2 col-md-offset-2">
 					<img src="img/dave.png" alt="" class="avatar">
-					<h3>Geeky Gadgets</h3>
+					<h3>Hackathon Superpowers</h3>
 					<h4 class="namesubtag">by Dave Fontenot</h4>
 					<p class="homeprice">$19/m</p>
 				</div>
 				<div class="col-md-2">
 					<img src="img/dave.png" alt="" class="avatar">
-					<h3>Geeky Gadgets</h3>
+					<h3>Hackathon Superpowers</h3>
 					<h4 class="namesubtag">by Dave Fontenot</h4>
 					<p class="homeprice">$19/m</p>
 				</div>
 				<div class="col-md-2">
 					<img src="img/dave.png" alt="" class="avatar">
-					<h3>Geeky Gadgets</h3>
+					<h3>Hackathon Superpowers</h3>
 					<h4 class="namesubtag">by Dave Fontenot</h4>
 					<p class="homeprice">$19/m</p>
 				</div>
 				<div class="col-md-2">
 					<img src="img/dave.png" alt="" class="avatar">
-					<h3>Geeky Gadgets</h3>
+					<h3>Hackathon Superpowers</h3>
 					<h4 class="namesubtag">by Dave Fontenot</h4>
 					<p class="homeprice">$19/m</p>
 				</div>
@@ -86,51 +86,51 @@
 						<tr>
 							<td>
 								<img src="img/dave.png" alt="" class="avatar">
-								<h3>Geeky Gadgets</h3>
+								<h3>Hackathon Superpowers</h3>
 								<h4>by Dave Fontenot</h4>
 							</td>
 							<td>
 								<img src="img/dave.png" alt="" class="avatar">
-								<h3>Geeky Gadgets</h3>
+								<h3>Hackathon Superpowers</h3>
 								<h4>by Dave Fontenot</h4>
 							</td>
 							<td>
 								<img src="img/dave.png" alt="" class="avatar">
-								<h3>Geeky Gadgets</h3>
-								<h4>by Dave Fontenot</h4>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<img src="img/dave.png" alt="" class="avatar">
-								<h3>Geeky Gadgets</h3>
-								<h4>by Dave Fontenot</h4>
-							</td>
-							<td>
-								<img src="img/dave.png" alt="" class="avatar">
-								<h3>Geeky Gadgets</h3>
-								<h4>by Dave Fontenot</h4>
-							</td>
-							<td>
-								<img src="img/dave.png" alt="" class="avatar">
-								<h3>Geeky Gadgets</h3>
+								<h3>Hackathon Superpowers</h3>
 								<h4>by Dave Fontenot</h4>
 							</td>
 						</tr>
 						<tr>
 							<td>
 								<img src="img/dave.png" alt="" class="avatar">
-								<h3>Geeky Gadgets</h3>
+								<h3>Hackathon Superpowers</h3>
 								<h4>by Dave Fontenot</h4>
 							</td>
 							<td>
 								<img src="img/dave.png" alt="" class="avatar">
-								<h3>Geeky Gadgets</h3>
+								<h3>Hackathon Superpowers</h3>
 								<h4>by Dave Fontenot</h4>
 							</td>
 							<td>
 								<img src="img/dave.png" alt="" class="avatar">
-								<h3>Geeky Gadgets</h3>
+								<h3>Hackathon Superpowers</h3>
+								<h4>by Dave Fontenot</h4>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="img/dave.png" alt="" class="avatar">
+								<h3>Hackathon Superpowers</h3>
+								<h4>by Dave Fontenot</h4>
+							</td>
+							<td>
+								<img src="img/dave.png" alt="" class="avatar">
+								<h3>Hackathon Superpowers</h3>
+								<h4>by Dave Fontenot</h4>
+							</td>
+							<td>
+								<img src="img/dave.png" alt="" class="avatar">
+								<h3>Hackathon Superpowers</h3>
 								<h4>by Dave Fontenot</h4>
 							</td>
 						</tr>
