--- a/personsbox.html
+++ b/personsbox.html
@@ -42,7 +42,7 @@
 				</div>
 				<div class="col-md-3">
 					<img src="img/dave.png" alt="" class="avatar">
-					<h3>Geeky Gadgets</h3>
+					<h3>Hackathon Superpowers</h3>
 					<h4>by Dave Fontenot</h4>
 					<h4 class="price">$19/m</h4>
 					<button type="button" class="btn btn-info order-button">order now</button>
