added pages for tracy mcgrady, made the home page better.

--- a/index.html
+++ b/index.html
@@ -33,35 +33,43 @@
 			<div class="row featuredboxes">
 				
 				<div class="col-md-2 col-md-offset-2">
-					<img src="img/dave.png" alt="" class="avatar">
-					<h3>Hackathon Superpowers</h3>
-					<h4 class="namesubtag">by Dave Fontenot</h4>
-					<p class="homeprice">$19/m</p>
+					<a href="hackathonsuperpowers.html">
+						<img src="img/dave.png" alt="" class="avatar">
+						<h3 class="featured-box-subtitle">Hackathon Superpowers</h3>
+						<h4 class="namesubtag">by Dave Fontenot</h4>
+						<p class="homeprice">$19/m</p>
+					</a>
 				</div>
 				<div class="col-md-2">
-					<img src="img/dave.png" alt="" class="avatar">
-					<h3>Hackathon Superpowers</h3>
-					<h4 class="namesubtag">by Dave Fontenot</h4>
-					<p class="homeprice">$19/m</p>
+					<a href="tracymcgrady.html">
+						<img src="img/tracymcgrady.png" alt="" class="avatar">
+						<h3 class="featured-box-subtitle">Something Basketball?</h3>
+						<h4 class="namesubtag">by Tracy McGrady</h4>
+						<p class="homeprice">$19/m</p>
+					</a>
 				</div>
 				<div class="col-md-2">
-					<img src="img/dave.png" alt="" class="avatar">
-					<h3>Hackathon Superpowers</h3>
-					<h4 class="namesubtag">by Dave Fontenot</h4>
-					<p class="homeprice">$19/m</p>
+					<a href="hackathonsuperpowers.html">
+						<img src="img/dave.png" alt="" class="avatar">
+						<h3 class="featured-box-subtitle">Hackathon Superpowers</h3>
+						<h4 class="namesubtag">by Dave Fontenot</h4>
+						<p class="homeprice">$19/m</p>
+					</a>
 				</div>
 				<div class="col-md-2">
-					<img src="img/dave.png" alt="" class="avatar">
-					<h3>Hackathon Superpowers</h3>
-					<h4 class="namesubtag">by Dave Fontenot</h4>
-					<p class="homeprice">$19/m</p>
+					<a href="tracymcgrady.html">
+						<img src="img/tracymcgrady.png" alt="" class="avatar">
+						<h3 class="featured-box-subtitle">Something Basketball?</h3>
+						<h4 class="namesubtag">by Tracy McGrady</h4>
+						<p class="homeprice">$19/m</p>
+					</a>
 				</div>
 
 			</div>
 
 			<div class="row">
 				<div class="col-md-12">
-					<a href="personsbox.html">
+					<a href="#">
 						<button type="button" class="btn btn-info viewmore">view more</button>
 					</a>
 				</div>
@@ -85,53 +93,80 @@
 					<table class="table">
 						<tr>
 							<td>
-								<img src="img/dave.png" alt="" class="avatar">
-								<h3>Hackathon Superpowers</h3>
-								<h4>by Dave Fontenot</h4>
+								<a href="hackathonsuperpowers.html">
+									<img src="img/dave.png" alt="" class="avatar">
+									<h3 class="box-subtitle">Hackathon Superpowers</h3>
+									<h4 class="box-curator">by Dave Fontenot</h4>
+									<p class="box-price">$19/m</p>
+								</a>
 							</td>
 							<td>
-								<img src="img/dave.png" alt="" class="avatar">
-								<h3>Hackathon Superpowers</h3>
-								<h4>by Dave Fontenot</h4>
+								<a href="tracymcgrady.html">
+									<img src="img/tracymcgrady.png" alt="" class="avatar">
+									<h3 class="box-subtitle">Something Basketball?</h3>
+									<h4 class="box-curator">by Tracy McGrady</h4>
+									<p class="box-price">$19/m</p>
+								</a>
 							</td>
 							<td>
-								<img src="img/dave.png" alt="" class="avatar">
-								<h3>Hackathon Superpowers</h3>
-								<h4>by Dave Fontenot</h4>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<img src="img/dave.png" alt="" class="avatar">
-								<h3>Hackathon Superpowers</h3>
-								<h4>by Dave Fontenot</h4>
-							</td>
-							<td>
-								<img src="img/dave.png" alt="" class="avatar">
-								<h3>Hackathon Superpowers</h3>
-								<h4>by Dave Fontenot</h4>
-							</td>
-							<td>
-								<img src="img/dave.png" alt="" class="avatar">
-								<h3>Hackathon Superpowers</h3>
-								<h4>by Dave Fontenot</h4>
+								<a href="hackathonsuperpowers.html">
+									<img src="img/dave.png" alt="" class="avatar">
+									<h3 class="box-subtitle">Hackathon Superpowers</h3>
+									<h4 class="box-curator">by Dave Fontenot</h4>
+									<p class="box-price">$19/m</p>
+								</a>
 							</td>
 						</tr>
 						<tr>
 							<td>
-								<img src="img/dave.png" alt="" class="avatar">
-								<h3>Hackathon Superpowers</h3>
-								<h4>by Dave Fontenot</h4>
+								<a href="tracymcgrady.html">
+									<img src="img/tracymcgrady.png" alt="" class="avatar">
+									<h3 class="box-subtitle">Something Basketball?</h3>
+									<h4 class="box-curator">by Tracy McGrady</h4>
+									<p class="box-price">$19/m</p>
+								</a>
 							</td>
 							<td>
-								<img src="img/dave.png" alt="" class="avatar">
-								<h3>Hackathon Superpowers</h3>
-								<h4>by Dave Fontenot</h4>
+								<a href="hackathonsuperpowers.html">
+									<img src="img/dave.png" alt="" class="avatar">
+									<h3 class="box-subtitle">Hackathon Superpowers</h3>
+									<h4 class="box-curator">by Dave Fontenot</h4>
+									<p class="box-price">$19/m</p>
+								</a>
 							</td>
 							<td>
-								<img src="img/dave.png" alt="" class="avatar">
-								<h3>Hackathon Superpowers</h3>
-								<h4>by Dave Fontenot</h4>
+								<a href="tracymcgrady.html">
+									<img src="img/tracymcgrady.png" alt="" class="avatar">
+									<h3 class="box-subtitle">Something Basketball?</h3>
+									<h4 class="box-curator">by Tracy McGrady</h4>
+									<p class="box-price">$19/m</p>
+								</a>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<a href="hackathonsuperpowers.html">
+									<img src="img/dave.png" alt="" class="avatar">
+									<h3 class="box-subtitle">Hackathon Superpowers</h3>
+									<h4 class="box-curator">by Dave Fontenot</h4>
+									<p class="box-price">$19/m</p>
+								</a>
+							</td>
+							<td>
+								<a href="tracymcgrady.html">
+									<img src="img/tracymcgrady.png" alt="" class="avatar">
+									<h3 class="box-subtitle">Something Basketball?</h3>
+									<h4 class="box-curator">by Tracy McGrady</h4>
+									<p class="box-price">$19/m</p>
+								</a>
+							</td>
+							<td>
+								<a href="hackathonsuperpowers.html">
+									<img src="img/dave.png" alt="" class="avatar">
+									<h3 class="box-subtitle">Hackathon Superpowers</h3>
+									<h4 class="box-curator">by Dave Fontenot</h4>
+									<p class="box-price">$19/m</p>
+								</a>
 							</td>
 						</tr>
 					</table>
