added hiring page, terms of service page

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 			<div class="col-md-2 col-md-offset-2">
 				<ul class="list-unstyled">
 					<li><a href="letsconnect.html">let's connect</a></li>
-					<li><a href="wearehiring.html">We Are Hiring</a></li>
+					<li><a href="hiring.html">We Are Hiring</a></li>
 					<li><a href="directory.html">Boxesby Directory</a></li>
 					<li><a href="levels.html">Levels</a></li>
 					<li><a href="blog.html">The Boxesby Blog</a></li>
@@ -201,7 +201,7 @@
 			<div class="col-md-2 ">
 				<ul class="list-unstyled">
 					<li><a href="mediapress.html">media and press</a></li>
-					<li><a href="wearehiring.html">We Are Hiring</a></li>
+					<li><a href="hiring.html">We Are Hiring</a></li>
 					<li><a href="directory.html">Boxesby Directory</a></li>
 					<li><a href="levels.html">Levels</a></li>
 					<li><a href="blog.html">The Boxesby Blog</a></li>
@@ -212,7 +212,7 @@
 			<div class="col-md-2 ">
 				<ul class="list-unstyled">
 					<li><a href="general.html">general</a></li>
-					<li><a href="wearehiring.html">We Are Hiring</a></li>
+					<li><a href="hiring.html">We Are Hiring</a></li>
 					<li><a href="directory.html">Boxesby Directory</a></li>
 					<li><a href="levels.html">Levels</a></li>
 					<li><a href="blog.html">The Boxesby Blog</a></li>
