--- a/hiring.html
+++ b/hiring.html
@@ -27,7 +27,12 @@
 		<div class="row">
 			
 			<div class="col-md-12">
-				<h2 class="subheading">Get geeky gadgets every month from famous celebrities!</h2>
+				<h2 class="subheading">We are hiring!</h2>
+				<div class="row">
+					<div class="col-md-12">
+						<a href="mailto:box@boxesby.com?subject=Request to Intern"><h3 class="subheading">Shoot us an email.</h3></a>
+					</div>
+				</div>
 			</div>	
 
 		</div>
@@ -35,46 +40,9 @@
 		
 		
 		<div class="row">
-			
-			<div class="col-md-8 col-md-offset-2">
-				<div class="table-responsive">
-					<table class="table selectedperson">
-						<tr>
-							<td class="youtube-td">
-								<img src="http://i.imgur.com/AbLuB5l.jpg" alt="" class="img-responsive">
-							</td>
-							<td class="curator">
-								<img src="img/tracymcgrady.png" alt="" class="avatar img-responsive">
-								<h3>Something Basketball?</h3>
-								<h4>by Tracy McGrady</h4>
-								<h4 class="price">$19/m</h4>
-								<button type="button" class="btn btn-info order-button">order now</button>
-							</td>
-						</tr>
-					</table>
-				</div>
-			</div>
-
+		
 		</div>
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2 aboutbox">
-			
-				<h3>About the box</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean iaculis sagittis ullamcorper. In placerat purus mi, sed pulvinar purus sagittis in. Etiam eleifend varius libero. Vivamus et eros euismod, placerat eros id, dignissim lacus. Sed aliquam at libero id dictum. Etiam non interdum mi. Donec tristique massa at nisi commodo consectetur. Mauris imperdiet dapibus fringilla. Nulla elementum nec lorem ac tincidunt. Nulla leo orci, semper in mauris et, varius vehicula ipsum. Vestibulum magna diam, placerat nec augue vel, congue hendrerit turpis. Cras tempor dolor ut odio ultrices sagittis. Praesent fringilla enim elit, non luctus arcu semper eget. Fusce sit amet posuere leo, non ullamcorper felis. </p>
-			
-				<h3>Past Boxes</h3>
-				<div class="pastBoxes">
-					<div class="col-md-4 col-md-offset-2">
-						<img src="img/pastBoxes.jpg" alt="" class="img-responsive"><h4>November 2013</h4>
-						<img src="img/pastBoxes.jpg" alt="" class="img-responsive"><h4>December 2013</h4>
-					</div>
-					<div class="col-md-4">
-						<img src="img/pastBoxes.jpg" alt="" class="img-responsive"><h4>November 2013</h4>
-						<img src="img/pastBoxes.jpg" alt="" class="img-responsive"><h4>December 2013</h4>
-					</div>
-				</div>	
-			</div>
-		</div>
+		
 	</div>
 	<footer class="row" id="footer">
 		<div class="col-md-2 col-md-offset-2">
