--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			
 			<div class="row">
 				<div class="col-md-12">
-					<h1 class="tagline">Get awesome stuff monthly from people you follow</h1>	
+					<h1 class="tagline">Get stuff monthly from people you follow while supporting charities.</h1>
 				</div>
 			</div>	
 
