--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 						<img src="img/logo.png" alt="BoxesBy" class="logo">
 					</a>
 					<ul class="nav nav-pills">
-						<li class="active"><a href="#">Home</a></li>
+						<li class="selected"><a href="#">Home</a></li>
 						<li><a href="mailto:box@boxesby.com?subject=Request to Curate a Box&body=#please include your twitter handle">make a box</a></li>
 						<li><a href="signin.html">login</a></li>
 						<li><a href="signup.html">sign up</a></li>
