Even more CSS awesomeness!

--- a/index.html
+++ b/index.html
@@ -84,21 +84,19 @@
 			</div>
 		</div>
 		<div class="container">
-			<div class="row">
-				<div class="btn-group">
-					<button type="button" class="btn btn-default dropdown-toggle categories" data-toggle="dropdown">
-						<span class="caret"></span> categories 
-					</button>
-					<ul class="dropdown-menu" role="menu">
-						<li><a href="#">add categories here</a></li>
-						<li><a href="#">add categories here</a></li>
-						<li><a href="#">add categories here</a></li>
-					</ul>
-				</div>
+			<div class="btn-group">
+				<button type="button" class="btn btn-default dropdown-toggle categories" data-toggle="dropdown">
+					<span class="caret"></span> categories 
+				</button>
+				<ul class="dropdown-menu" role="menu">
+					<li><a href="#">add categories here</a></li>
+					<li><a href="#">add categories here</a></li>
+					<li><a href="#">add categories here</a></li>
+				</ul>
 			</div>
 			<div class="row">
 				<div class="table-responsive">
-					<table class="table">
+					<table class="table homepage">
 						<tr>
 							<td>
 								<a href="hackathonsuperpowers.html">
